--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,13 +4,17 @@
 <head>
   <title> {{title}} </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  
 </head>
 
 <body>
   <h1> {{title}} </h1>
   <p>Welcome to {{title}} </p>
+
+  <canvas id="my-chart" width= "600px"></canvas>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <script src="/javascripts/financial-data.js" charset="utf-8"></script>
 
 </html>
